--- a/src/main/webapp/WEB-INF/webscripts/pages/page-creator.get.properties
+++ b/src/main/webapp/WEB-INF/webscripts/pages/page-creator.get.properties
@@ -1,1 +1,1 @@
-surf.include.resources=org/alfresco/aikau/webscript/libs/creation/template-mapping-config.lib,org/alfresco/aikau/webscript/libs/dnd-models/layout.lib,imports/models/forms.lib
+surf.include.resources=org/alfresco/aikau/webscript/libs/creation/template-mapping-config.lib,org/alfresco/aikau/webscript/libs/dnd-models/layout.lib,imports/models/forms.lib,imports/models/DocumentList.lib,imports/models/HtmlListView.lib
